--- a/charts/fastapi/values.yaml
+++ b/charts/fastapi/values.yaml
@@ -1,4 +1,5 @@
-AML-formatted file.
+# Default values for example.
+# This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
